# research-agent

./: .gitignore  README.md  main.py  pyproject.toml
chains/: agent_chain.py  chatbot_chain.py  lcel_pipelines.py  memory_chain.py  multi_agent_workflow.py  rag_chain.py  structured_chain.py
frontend/: app.py
loaders/: document_loader.py  text_splitter.py
models/: embeddings.py  llm.py  vectorstore.py
prompts/: chat_prompt.py
schemas/: response_schema.py
tools/: tools.py
